
* Methods unfold_locales and intro_locales ignore non-locale subgoals.  This
is more appropriate for interpretations with 'where'.  INCOMPATIBILITY.

* Discontinued unnamed infix syntax (legacy feature for many years) --
need to specify constant name and syntax separately.  Internal ML
datatype constructors have been renamed from InfixName to Infix etc.
Minor INCOMPATIBILITY.

* Commands 'type_notation' and 'no_type_notation' declare type syntax
within a local theory context, with explicit checking of the
constructors involved (in contrast to the raw 'syntax' versions).

* Commands 'types' and 'typedecl' now work within a local theory
context -- without introducing dependencies on parameters or
assumptions, which is not possible in Isabelle/Pure.

* Proof terms: Type substitutions on proof constants now use canonical
order of type variables. INCOMPATIBILITY: Tools working with proof
terms may need to be adapted.


*** HOL ***

* Abstract algebra:
  * classes division_ring_inverse_zero, field_inverse_zero, linordered_field_inverse_zero
    include rule inverse 0 = 0 -- subsumes former division_by_zero class.
  * numerous lemmas have been ported from field to division_ring;
  * dropped theorem group group_simps, use algebra_simps instead;
  * dropped theorem group ring_simps, use field_simps instead;
  * proper theorem collection field_simps subsumes former theorem groups field_eq_simps and field_simps;
  * dropped lemma eq_minus_self_iff which is a duplicate for equal_neg_zero.

  INCOMPATIBILITY.

* Library theory 'RBT' renamed to 'RBT_Impl'; new library theory 'RBT'
provides abstract red-black tree type which is backed by RBT_Impl
as implementation.  INCOMPATIBILTY.

* Command 'typedef' now works within a local theory context -- without
introducing dependencies on parameters or assumptions, which is not
possible in Isabelle/Pure/HOL.  Note that the logical environment may
contain multiple interpretations of local typedefs (with different